--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  firebase_app_check: ^0.2.1+8
 
 
 dev_dependencies:
