--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.2 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -43,6 +43,9 @@ dependencies:
   shared_preferences: ^2.2.2
   fluttertoast: ^8.2.4
   google_sign_in: ^6.2.1
+  material_design_icons_flutter: ^7.0.7296
+  flutter_neumorphic: ^3.2.0
+
 
 
 
